# fast-logger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  demo_output.txt  demo_tier1_ui.py  demo_tier2.py  demo_tier2_formatters.py  demo_tier3.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml  workflow.yml
docs/: ROADMAP.md
examples/: basic_usage.py  demo_v2_features.py
fast_logger/: __init__.py  cli.py  core.py  exceptions.py  export.py  fastapi.py  formatters.py  masking.py  replay.py  sysinfo.py  themes.py  timeline.py  viewer.py
fast_logger/plugins/: __init__.py  celery.py  fastapi.py  flask.py  openai.py  redis.py  requests.py  sqlalchemy.py
python_fast_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_exceptions.py  test_export.py  test_fast_logger.py  test_final_sprint.py  test_plugins_new.py  test_tier2_features.py  test_tier2_formatters.py  test_tier3_coverage.py  test_tier3_features.py  test_tier3_final.py
