[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fast-logger"
version = "0.6.0"
description = "A simple, no-fuss logging setup for Python applications — with colored output, JSON format, and async-safe logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ravi Mishra", email = "ravi@iscodesearch.com"}
]
maintainers = [
    {name = "Ravi Mishra", email = "ravi@iscodesearch.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
keywords = ["logging", "logger", "simple", "fast", "rotating", "file", "json", "colored", "async", "structured"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
rich = [
    "rich>=13.0.0"
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
fastlogger = "fast_logger.cli:main"

[project.urls]
Homepage = "https://github.com/RaviMishra-94/fast-logger"
Documentation = "https://github.com/RaviMishra-94/fast-logger/blob/main/README.md"
Repository = "https://github.com/RaviMishra-94/fast-logger.git"
"Bug Tracker" = "https://github.com/RaviMishra-94/fast-logger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_logger*"]



[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "starlette.*",
    "rich.*",
    "PIL.*",
    "requests.*",
    "opentelemetry.*",
    "textual.*",
    "redis.*",
    "openai.*",
    "flask.*",
    "celery.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true